# dealmaker

./: .gitignore  README.md
backend/app/: pyproject.toml  test.py
backend/app/src/data/: cards.yml  property_color.yml
backend/terraform/: .terraform.lock.hcl  main.tf  sample.json  var.tfvars
backend/terraform/modules/ochestrator/: main.tf
